print cocoapods version before pod install
Former-commit-id: 8ee9c7e85c502d3716e256176fce6942fb26b2c0

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - pushd src/objective-c/tests
   # Needs to be verbose, or otherwise OpenSSL's prepare_command makes Travis
   # time out:
+  - pod --version
   - pod install --verbose
   - popd
 before_script:
