--- a/build.yaml
+++ b/build.yaml
@@ -748,7 +748,8 @@ libs:
   - include/grpc++/impl/codegen/sync_stream.h
   - include/grpc++/impl/codegen/time.h
   headers: []
-  src: []
+  src:
+  - include/grpc++/impl/codegen/proto_serializer.cc
   deps:
   - grpc_codegen_lib
   filegroups:
