--- a/build.yaml
+++ b/build.yaml
@@ -184,12 +184,9 @@ filegroups:
   - src/cpp/client/credentials.cc
   - src/cpp/client/generic_stub.cc
   - src/cpp/client/insecure_credentials.cc
-  - src/cpp/common/call.cc
   - src/cpp/common/channel_arguments.cc
   - src/cpp/common/completion_queue.cc
   - src/cpp/common/rpc_method.cc
-  - src/cpp/proto/proto_serializer.cc
-  - src/cpp/proto/proto_utils.cc
   - src/cpp/server/async_generic_service.cc
   - src/cpp/server/create_default_thread_pool.cc
   - src/cpp/server/dynamic_thread_pool.cc
@@ -201,7 +198,6 @@ filegroups:
   - src/cpp/util/byte_buffer.cc
   - src/cpp/util/slice.cc
   - src/cpp/util/status.cc
-  - src/cpp/util/string_ref.cc
   - src/cpp/util/time.cc
 - name: grpc_base
   public_headers:
@@ -698,6 +694,7 @@ libs:
   - src/cpp/server/secure_server_credentials.h
   src:
   - src/cpp/client/secure_credentials.cc
+  - src/cpp/codegen/core_codegen.cc
   - src/cpp/codegen/grpc_library.cc
   - src/cpp/common/auth_property_iterator.cc
   - src/cpp/common/secure_auth_context.cc
@@ -728,6 +725,7 @@ libs:
   - include/grpc++/impl/codegen/completion_queue_tag.h
   - include/grpc++/impl/codegen/config.h
   - include/grpc++/impl/codegen/config_protobuf.h
+  - include/grpc++/impl/codegen/core_codegen_interface.h
   - include/grpc++/impl/codegen/grpc_library.h
   - include/grpc++/impl/codegen/method_handler_impl.h
   - include/grpc++/impl/codegen/proto_utils.h
@@ -748,8 +746,7 @@ libs:
   - include/grpc++/impl/codegen/sync_stream.h
   - include/grpc++/impl/codegen/time.h
   headers: []
-  src:
-  - include/grpc++/impl/codegen/proto_serializer.cc
+  src: []
   deps:
   - grpc_codegen_lib
   filegroups:
