Chromad: Create AuthPolicyCredentialsManager
AuthPolicyCredentialsManager KeyedService service is created for every
Active Directory user profile.
It calls GetUserStatus at the start of service, each hour and on every
network connection.
Tests are coming...

BUG=662400
TBR=rsorokin@chromium.org

(cherry picked from commit 0e86186e259ff9193c6165141858feef9e20a8bb [formerly 7ccdfaf7c1639a6f1e12d206fea9a608b6c33f44])

Review-Url: https://codereview.chromium.org/2860443002
Cr-Original-Commit-Position: refs/heads/master@{#476248}
Change-Id: Ie03e381e53e1f75b0f2e866da5ee1b1bd85372ac
Reviewed-on: https://chromium-review.googlesource.com/525533
Reviewed-by: Roman Sorokin <rsorokin@chromium.org>
Cr-Commit-Position: refs/branch-heads/3112@{#178}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}
Former-commit-id: ee074e7389ec45b5b851dc9052576905465e1daa

--- a/chrome/browser/chromeos/BUILD.gn
+++ b/chrome/browser/chromeos/BUILD.gn
@@ -53,6 +53,7 @@ source_set("chromeos") {
     "//chrome/common/safe_browsing:proto",
     "//chromeos",
     "//chromeos:attestation_proto",
+    "//chromeos:authpolicy_proto",
     "//chromeos:cryptohome_proto",
     "//chromeos:cryptohome_signkey_proto",
     "//chromeos/components/tether",
@@ -356,6 +357,8 @@ source_set("chromeos") {
     "attestation/platform_verification_flow.h",
     "attestation/platform_verification_impl.cc",
     "attestation/platform_verification_impl.h",
+    "authpolicy/auth_policy_credentials_manager.cc",
+    "authpolicy/auth_policy_credentials_manager.h",
     "background/ash_wallpaper_delegate.cc",
     "background/ash_wallpaper_delegate.h",
     "base/file_flusher.cc",
