Use desktop toolbar icons in VR.
Previously, VR was using similar-looking icons to the desktop location
bar.  This CL switches to use the same icons.  As a result, the VR lock
icon no longer has a key-hole in it.

BUG=728175

Change-Id: I3c7af24303db28d5de5157ed6cf37c362d70cc88
Reviewed-on: https://chromium-review.googlesource.com/521322
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#477120}
Review-Url: https://codereview.chromium.org/2923843002 .
Cr-Commit-Position: refs/branch-heads/3112@{#192}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: 49e1d0dfe45f9c748178eac73e41266534c10c90

--- a/chrome/browser/android/vr_shell/BUILD.gn
+++ b/chrome/browser/android/vr_shell/BUILD.gn
@@ -86,6 +86,7 @@ if (current_cpu == "arm" || current_cpu == "arm64") {
       "//base",
       "//cc/paint",
       "//components/security_state/core",
+      "//components/toolbar:vector_icons",
       "//components/url_formatter",
       "//components/vector_icons",
       "//content/public/browser",
