VR: Further split common code from Android-specific code.
Separate the UI to browser interface, to drop all Android awareness.
Also, fix a few instances of code that doesn't compile on linux.

The only thing needed now to compile tests on linux is a reference from
src/BUILD.gn, and exposing a few libraries and string resources exposed
to linux.

BUG=727396

Change-Id: I7c5a840b0820617a674b9668ebbb538e0ea62cfc
Reviewed-on: https://chromium-review.googlesource.com/521325
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Yash Malik <ymalik@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#477304}
Review-Url: https://codereview.chromium.org/2929483003 .
Cr-Commit-Position: refs/branch-heads/3112@{#193}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: b7d24a4f80036ac2bfdaf43b6394e7f2461f5bdd

--- a/chrome/browser/android/vr_shell/BUILD.gn
+++ b/chrome/browser/android/vr_shell/BUILD.gn
@@ -24,6 +24,7 @@ if (current_cpu == "arm" || current_cpu == "arm64") {
       "font_fallback.h",
       "fps_meter.cc",
       "fps_meter.h",
+      "gl_browser_interface.h",
       "gltf_asset.cc",
       "gltf_asset.h",
       "gltf_parser.cc",
@@ -48,6 +49,7 @@ if (current_cpu == "arm" || current_cpu == "arm64") {
       "textures/ui_texture.h",
       "textures/url_bar_texture.cc",
       "textures/url_bar_texture.h",
+      "ui_browser_interface.h",
       "ui_elements/audio_capture_indicator.cc",
       "ui_elements/audio_capture_indicator.h",
       "ui_elements/button.cc",
@@ -79,13 +81,14 @@ if (current_cpu == "arm" || current_cpu == "arm64") {
       "ui_scene_manager.cc",
       "ui_scene_manager.h",
       "ui_unsupported_mode.h",
-      "vr_browser_interface.h",
     ]
 
     deps = [
       "//base",
       "//cc/paint",
+      "//chrome/app:generated_resources",
       "//components/security_state/core",
+      "//components/strings",
       "//components/toolbar:vector_icons",
       "//components/url_formatter",
       "//components/vector_icons",
@@ -101,6 +104,8 @@ if (current_cpu == "arm" || current_cpu == "arm64") {
     ]
   }
 
+  # This library contains the VR code specific to Android.
+  # TODO(cjgrant): It should be renamed to reflect this.
   static_library("vr_common") {
     defines = []
 
