--- a/ash/resources/vector_icons/BUILD.gn
+++ b/ash/resources/vector_icons/BUILD.gn
@@ -81,6 +81,8 @@ aggregate_vector_icons("ash_vector_icons") {
     "notification_low_power_battery.icon",
     "notification_screen.icon",
     "notification_settings.icon",
+    "notification_stylus_battery_warning.1x.icon",
+    "notification_stylus_battery_warning.icon",
     "notification_timer.icon",
     "palette_action_capture_region.1x.icon",
     "palette_action_capture_region.icon",
