--- a/src/gin/BUILD.gn
+++ b/src/gin/BUILD.gn
@@ -39,6 +39,7 @@ component("gin") {
     "modules/module_runner_delegate.h",
     "modules/timer.cc",
     "modules/timer.h",
+    "multi_heap_tracer.cc",
     "object_template_builder.cc",
     "object_template_builder.h",
     "per_context_data.cc",
@@ -49,6 +50,7 @@ component("gin") {
     "public/debug.h",
     "public/gin_embedders.h",
     "public/isolate_holder.h",
+    "public/multi_heap_tracer.h",
     "public/v8_idle_task_runner.h",
     "public/v8_platform.h",
     "public/wrapper_info.h",
