--- a/src/chrome/chrome_blpwtk2/BUILD.gn
+++ b/src/chrome/chrome_blpwtk2/BUILD.gn
@@ -38,6 +38,12 @@ static_library("chrome_blpwtk2") {
     "//chrome/utility/printing_handler.h",
     "//chrome/common/pref_names.cc",
     "//chrome/common/pref_names.h",
+    "//chrome/browser/spellchecker/spellcheck_service.cc",
+    "//chrome/browser/spellchecker/spellcheck_service.h",
+    "//chrome/browser/spellchecker/spellcheck_factory.cc",
+    "//chrome/browser/spellchecker/spellcheck_factory.h",
+    "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.cc",
+    "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.h",
 
     # required by //chrome/common/chrome_content_client.cc
     "//chrome/common/chrome_switches.cc",
@@ -70,6 +76,9 @@ static_library("chrome_blpwtk2") {
      "//chrome/common:page_load_metrics_mojom",
      "//ipc:param_traits",
      "//pdf:features",
+
+     # required by //components/spellcheck/renderer/spellcheck_provider.cc
+     "//content/public/common:service_names",
 
      # required by many. this target generates the header files that define
      # macros to check the enablement of specific extensions.  Many
