Fix versioned naming scheme for v8_context_snapshot

--- a/src/content/shell/BUILD.gn
+++ b/src/content/shell/BUILD.gn
@@ -556,9 +556,17 @@ if (is_android) {
       "//tools/v8_context_snapshot:v8_context_snapshot",
     ]
 
-    data = [
-      "$root_out_dir/v8_context_snapshot.bin",
-    ]
+    data = []
+    if (bb_version != "") {
+      data += [
+        "$root_out_dir/v8_context_snapshot.bin",
+      ]
+    }
+    else {
+      data += [
+        "$root_out_dir/v8_context_snapshot.$bb_version.bin"
+      ]
+    }
 
     if (is_win) {
       deps += [ "//sandbox" ]
@@ -631,9 +639,19 @@ if (is_mac) {
   bundle_data("content_shell_framework_resources") {
     sources = [
       "$root_out_dir/content_shell.pak",
-      "$root_out_dir/v8_context_snapshot.bin",
       "resources/missingImage.png",
     ]
+
+    if (bb_version != "") {
+      sources += [
+        "$root_out_dir/v8_context_snapshot.bin",
+      ]
+    }
+    else {
+      sources += [
+        "$root_out_dir/v8_context_snapshot.$bb_version.bin"
+      ]
+    }
 
     public_deps = [
       ":pak",
