--- a/src/tools/v8_context_snapshot/BUILD.gn
+++ b/src/tools/v8_context_snapshot/BUILD.gn
@@ -46,6 +46,10 @@ if (use_v8_context_snapshot) {
     output_file = "$root_out_dir/v8_context_snapshot.bin"
     output_path = rebase_path(output_file, root_build_dir)
 
+    if (bb_version != "") {
+      output_file = "$root_out_dir/v8_context_snapshot.$bb_version.bin"
+    }
+
     args = [
       "./" + rebase_path(
               get_label_info(
