--- a/src/tools/v8_context_snapshot/BUILD.gn
+++ b/src/tools/v8_context_snapshot/BUILD.gn
@@ -11,6 +11,7 @@ import("//build/config/c++/c++.gni")
 import("//build/config/chromecast_build.gni")
 import("//build/config/compiler/compiler.gni")
 import("//v8/snapshot_toolchain.gni")
+import("//blpwtk2/blpwtk2.gni")
 
 if (is_android) {
   import("//build/config/android/rules.gni")
