--- a/src/chrome/chrome_blpwtk2/BUILD.gn
+++ b/src/chrome/chrome_blpwtk2/BUILD.gn
@@ -30,6 +30,24 @@ static_library("chrome_blpwtk2") {
 
   sources = [
     # required by //blpwtk2:blpwtk2
+    "//chrome/browser/printing/pdf_to_emf_converter.cc",
+    "//chrome/browser/printing/pdf_to_emf_converter.h",
+    "//chrome/browser/printing/print_job.cc",
+    "//chrome/browser/printing/print_job.h",
+    "//chrome/browser/printing/print_job_manager.cc",
+    "//chrome/browser/printing/print_job_manager.h",
+    "//chrome/browser/printing/print_job_worker.cc",
+    "//chrome/browser/printing/print_job_worker.h",
+    "//chrome/browser/printing/print_job_worker_owner.cc",
+    "//chrome/browser/printing/print_job_worker_owner.h",
+    "//chrome/browser/printing/print_view_manager_base.cc",
+    "//chrome/browser/printing/print_view_manager_base.h",
+    "//chrome/browser/printing/print_view_manager.cc",
+    "//chrome/browser/printing/print_view_manager.h",
+    "//chrome/browser/printing/printing_message_filter.cc",
+    "//chrome/browser/printing/printing_message_filter.h",
+    "//chrome/browser/printing/printer_query.cc",
+    "//chrome/browser/printing/printer_query.h",
     "//chrome/common/chrome_content_client.cc",
     "//chrome/common/chrome_content_client.h",
     "//chrome/common/chrome_content_client_constants.cc",
@@ -55,6 +73,7 @@ static_library("chrome_blpwtk2") {
   deps = [
      # required by //chrome/utility/printing_handler.cc
      "//components/printing/browser",
+     "//components/printing/renderer",
      "//components/signin/core/common:signin_features",
      "//components/safe_browsing/web_ui:constants",
      "//content",
